test/sema/typeck/return/def-for-return-type-unknown.out
error: unknown identifier `unknown`.
--> def-for-return-type-unknown.dora:1:9
 | fn a(): unknown {}
           ~~~~~~~
 | 
1 error found.
